[gd_scene format=3 uid="uid://cxiscaotq838n"]

[ext_resource type="Script" uid="uid://bq4cbxjtp7eln" path="res://scripts/ui/pause_screen.gd" id="1_tfymj"]
[ext_resource type="Script" uid="uid://df2vt8tkt83ek" path="res://scripts/ui/ButtonAudioConnector.gd" id="2_owjci"]

[node name="PauseScreen" type="Control" unique_id=1710817815]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tfymj")

[node name="ColorRect" type="ColorRect" parent="." unique_id=2040966990]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.83137256, 1, 1, 0.3137255)

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=895425072]
layout_mode = 1
offset_left = 170.0
offset_top = 140.0
offset_right = 470.0
offset_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=382075578]
layout_mode = 1
offset_left = 239.5
offset_top = 231.0
offset_right = 400.5
offset_bottom = 449.0
theme_override_constants/separation = 10
script = ExtResource("2_owjci")

[node name="continue" type="Button" parent="VBoxContainer" unique_id=177825189]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
text = "Continue"

[node name="main menu" type="Button" parent="VBoxContainer" unique_id=869408163]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
text = "Main Menu"

[node name="quit" type="Button" parent="VBoxContainer" unique_id=1698340587]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
text = "Quit"

[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/main menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
